# gwpy

./: .appveyor.yml  .codebeatignore  .codeclimate.yml  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .landscape.yml  .markdownlint.yml  .pep8speaks.yml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  MANIFEST.in  Portfile.template  README.md  README.rst  appveyor.yml  azure-pipelines.yml  changelog.py  conftest.py  pyproject.toml  requirements-2.6.txt  requirements-apt.txt  requirements-conda.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  setup_utils.py  vcs.py
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  conda.yml  dependencies.yml  dist.yml  documentation.yml  lint.yml  release.yml
.gitlab/ci/: compatibility.yml  coverage.yml  init-creds.sh  init-cvmfs.sh  platforms.yml  publish-job.yml  publish.yml  python-base.yml  python-dist.yml  qa.yml  rstcheck.py  rules.yml  sphinx.yml  test-job.yml  test.yml  twine.yml
.gitlab/issue_templates/: Example.md
.travis/: build-lal.sh  build-lalsuite.sh  build-src-dependencies.sh  build-with-autotools.sh  build_lal.sh  find-latest-release.py  find-latest-releases.sh  install-requirements.sh  run-tests.sh  setup.sh
cextern/libframe/: frgetvect.c
cextern/segments/: infinity.c  segment.c  segmentlist.c  segments.c  segments.h
ci/: codecov.sh  coveralls.sh  deploy.sh  docker-install.sh  install-conda.sh  install-debian.sh  install-el.sh  install-macos.sh  install-macports.sh  install-pip.sh  install.sh  lib.sh  parse-conda-requirements.py  test.sh
debian/: changelog  control  copyright  files  gwpy-plot.install  python-gwpy.pydist  python3-gwpy.pydist  rules
docs/: .gitignore  Makefile  _references.rst  about.rst  citing.rst  citing.rst.in  concepts.rst  conf.py  env.rst  environment.yaml  ex2rst.py  getting-started.rst  getting_started.rst  guide.rst  index.rst  install.rst  license.rst  logging.rst  overview.rst  quickstart.rst  references.rst  references.txt  zenodo-citations.py
docs/_static/: bootstrap-gwpy.css  gwpy-sphinx.css
docs/_templates/: layout.html
docs/astro/: index.rst
docs/cli/: coherence.rst  coherencegram.rst  examples.ini  index.rst  interactive.rst  spectrogram.rst  spectrum.rst  timeseries.rst
docs/data/: index.rst  spectrum.rst  statevector.rst  timeseries-filtering.rst  timeseries-gwf.rst  timeseries-nds.rst  timeseries.rst
docs/detector/: api.rst  channel.rst  index.rst
docs/dev/: release.rst
docs/examples/: gw_ex_compare_spectra.rst  gw_ex_compare_spectra_zoom.py  gw_ex_plot_event_histogram.rst  gw_ex_plot_event_triggers.rst  gw_ex_plot_median_spectrogram.rst  gw_ex_plot_spectrogram.rst  gw_ex_plot_statevector.rst  gw_ex_plot_timeseries.rst  gw_ex_plot_transfer_function.rst  gw_ex_plot_transfer_function_asds.py  howto.rst  index.rst  rst.tpl
docs/install/: index.rst  lal.rst
docs/io/: index.rst
docs/plot/: colorbars.rst  colors.rst  filter.rst  gps.rst  index.rst  legend.rst  log.rst
docs/plotter/: api.rst  colors.rst  filter.rst  index.rst
docs/reference/: gwpy.astro.rst  gwpy.detector.rst  gwpy.frequencyseries.rst  gwpy.io.cache.rst  gwpy.io.datafind.rst  gwpy.io.gwf.rst  gwpy.io.hdf5.rst  gwpy.io.kerberos.rst  gwpy.io.ligolw.rst  gwpy.io.nds2.rst  gwpy.io.pelican.rst  gwpy.io.registry.rst  gwpy.io.remote.rst  gwpy.io.root.rst  gwpy.io.rst  gwpy.io.scitokens.rst  gwpy.io.utils.rst  gwpy.log.rst  gwpy.plot.rst  gwpy.segments.rst  gwpy.signal.filter_design.rst  gwpy.signal.qtransform.rst  gwpy.signal.rst  gwpy.signal.spectral.rst  gwpy.signal.window.rst  gwpy.spectrogram.rst  gwpy.table.rst  gwpy.time.rst  gwpy.timeseries.rst  gwpy.types.rst  gwpy.utils.decorators.rst  gwpy.utils.lal.rst  gwpy.utils.rst  index.rst
docs/segments/: api.rst  dqflags.rst  dqsegdb.rst  index.rst  io.rst  segments.rst  thresholding.rst
docs/signal/: fft.rst  index.rst
docs/spectrogram/: index.rst  spectrogram_plot.py
docs/spectrum/: filtering.rst  index.rst  io.rst  spectrum_plot.py
docs/table/: filter.rst  gwosc.rst  histogram.rst  index.rst  io.rst  plot.rst  rate.rst
docs/time/: index.rst
docs/timeseries/: datafind.rst  filtering.rst  get.rst  gwf.rst  index.rst  io.rst  ldg.rst  nds.rst  opendata.rst  plot.rst  public-data.rst  public_data_plot.py  remote-access.rst  statevector.rst  timeseries_plot.py
docs/tools/: rds.rst  tconvert.rst
etc/: Portfile.template  spec.template
examples/: README.rst  gw_ex_bode_plot.py  gw_ex_compare_spectra.py  gw_ex_compare_spectra_zoom.py  gw_ex_plot_event_histogram.py  gw_ex_plot_event_rate.py  gw_ex_plot_event_rate_binned.py  gw_ex_plot_event_tiles.py  gw_ex_plot_event_triggers.py  gw_ex_plot_median_spectrogram.py  gw_ex_plot_spectrogram.py  gw_ex_plot_statevector.py  gw_ex_plot_timeseries.ipynb  gw_ex_plot_timeseries.py  gw_ex_plot_transfer_function.py  gw_ex_sensitivity_curve.py  test.py  test_examples.py
examples/frequencyseries/: README.rst  coherence.py  compare.py  hoff.py  index.rst  inject-fs.py  inject.py  percentiles.py  rayleigh.py  transfer_function.py  variance.py
examples/miscellaneous/: README.rst  bode_plot.py  index.rst  open-data-spectrogram.py  range-spectrogram.py  range-timeseries.py
examples/nbconvert/: python.tpl
examples/segments/: README.rst  index.rst  open-data.py
examples/signal/: README.rst  gw150914.py  index.rst  qscan.py
examples/spectrogram/: README.rst  coherence.py  coherencegram.py  index.rst  plot.py  ratio.py  rayleigh.py  rayleighgram.py  spectrogram2.py
examples/spectrum/: coherence.py  compare.py  hoff.py  index.rst  rayleigh.py  transfer_function.py  variance.py
examples/table/: README.rst  histogram.py  index.rst  rate.py  rate_binned.py  scatter.py  (+1 more)
gwpy/: __init__.py  _version.py  _version_helper.py  conftest.py  log.py  spectrum.py  typing.py  utils.py
pdpy/: __init__.py  conftest.py
source/: _version.py
typings/: README.md  lal.pyi  lalframe.pyi  nds2.pyi
utils/: __init__.py  version.py
(+761 files in other folders)
