# -- build

[build-system]
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=4.1.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "gwpy"
description = "A python package for gravitational-wave astrophysics"
readme = "README.md"
authors = [
  { name = "Duncan Macleod", email = "duncan.macleod@ligo.org" },
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]

# requirements
requires-python = ">=3.9"
dependencies = [
  "astropy >=4.3.0",
  "dateparser >=1.1.4",
  "dqsegdb2",
  "gwdatafind >=1.1.0",
  "gwosc >=0.5.3",
  "h5py >=3.0.0",
  "igwn-segments >=2.0.0",
  "ligotimegps >=1.2.1",
  "matplotlib >=3.3.0",
  "numpy >=1.19.5",
  "packaging >=24.1",
  "python-dateutil",
  "requests >=2.20.0",
  "scipy >=1.6.0",
  "tqdm >=4.52.0",
]

# dynamic properties set by tools
dynamic = [
  "version",
]

[project.optional-dependencies]
# -- optional features

# astronomy/cosmology calculations
astro = [
  "inspiral-range >=0.9.0",
]

# -- build/dev

# conda packages for development
# NOTE: this isn't a valid extra to install with pip, but works with pip2conda
conda = [
  "lxml !=4.9.1 ; sys_platform == 'win32'",
  "python-framel >=8.40.1,!=8.46.0",
  "python-ldas-tools-framecpp >=2.6.9 ; sys_platform != 'win32' and python_version<'3.12'",
  "python-nds2-client >=0.16",
]

# development environments
# NOTE: this should include everything in all of the above groups,
#       but may contain more
dev = [
  "ciecplib",
  "inspiral-range >=0.9.0",
  "lalsuite ; sys_platform != 'win32'",
  "lscsoft-glue ; sys_platform != 'win32'",
  "psycopg2 ; sys_platform == 'linux'",
  "pycbc >=1.13.4 ; sys_platform != 'win32'",
  "pymysql",
  "python-ligo-lw >=1.7.0,<2.0.0 ; sys_platform != 'win32'",
  "sqlalchemy",
  "uproot >=4.1.5",
]

# sphinx documentation
docs = [
  "numpydoc >=0.8.0",
  "Sphinx >=4.4.0",
  "sphinx-automodapi",
  "sphinx-immaterial >=0.7.3",
  "sphinxcontrib-programoutput",
]

# test suite
test = [
  "coverage[toml] >=5.0",
  "pytest >=3.9.1",
  "pytest-freezer",
  "pytest-cov >=2.4.0",
  "pytest-requires",
  "pytest-socket",
  "pytest-xdist",
  "requests-mock",
]

[project.scripts]
gwpy-plot = "gwpy.cli.gwpy_plot:main"

[project.urls]
"Bug Tracker" = "https://gitlab.com/gwpy/gwpy/-/issues"
"Discussion Forum" = "https://gwpy.slack.com"
"Documentation" = "https://gwpy.github.io/docs/"
"Source Code" = "https://gitlab.com/gwpy/gwpy"

[tool.setuptools]
license-files = [ "LICENSE" ]

[tool.setuptools.packages.find]
# note: this is only required in CI, which otherwise fails because
#       GHA is creating a temporary directory that setuptools
#       discovers as another top-level package
include = [
  "gwpy*",
]

[tool.setuptools_scm]
write_to = "gwpy/_version.py"
version_scheme = "release-branch-semver"

# -- coverage.py

[tool.coverage.paths]
source = [
  "gwpy/",
  "*/gwpy/",
]

[tool.coverage.report]
omit = [
  # don't report coverage for _version.py
  # (generated automatically by setuptools-scm)
  "*/_version.py",
]
# print report with one decimal point
precision = 1

# -- mypy

[tool.mypy]
exclude = [
  "^docs/",
  "^examples/",
]
ignore_missing_imports = true

# -- pytest

[tool.pytest.ini_options]
addopts = "-r a"
filterwarnings = [
  # https://github.com/gwastro/pycbc/pull/3701
  "ignore:`np.int` is a deprecated alias::pycbc..*",
  # https://git.ligo.org/lscsoft/glue/-/merge_requests/69
  "ignore:PY_SSIZE_T_CLEAN will be required",
  # https://github.com/pyreadline/pyreadline/issues/65
  "ignore:Using or importing the ABCs::pyreadline",
  # ignore numpy ndarray size warnings
  "ignore:numpy.ndarray size changed, may indicate binary incompatibility",
  # ignore warnings from distutils.version
  "ignore:distutils Version::matplotlib",
  "ignore:distutils Version::distutils",  # actually setuptools._distutils
  # ignore trapz warnings
  "ignore:`trapz` is deprecated::inspiral_range",
]
xfail_strict = true

# -- ruff

[tool.ruff]
namespace-packages = [
  ".gitlab/ci",
  "examples",
]

[tool.ruff.lint]
select = [
  # mccabe
  "C90",
  # pycodestyle errors
  "E",
  # flake8-executable
  "EXE",
  # pyflakes
  "F",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # pycodestyle warnings
  "W",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
# ignore unused import in __init__
"__init__.py" = [
  "F401",
]
# ignore import location in example scripts
"examples/**.py" = [
  "E402",
]

# -- rstcheck

[tool.rstcheck]
ignore_directives = [
  # matplotlib
  "plot",
  # sphinx
  "include",
  # sphinx.ext.autosummary
  "autoclass",
  "autofunction",
  "automethod",
  "automodule",
  "autosummary",
  # sphinx.ext.ifconfig
  "ifconfig",
  # sphinx-automodapi
  "automodsumm",
  # sphinx-immaterial
  "md-tab-set",
  # sphinx-panels
  "tabbed",
  # sphinxcontrib-programoutput
  "command-output",
]
ignore_roles = [
  # doxylink
  "lal",
  "lalframe",
]
# rstcheck doesn't known about our referenced.txt which is implicitly included
# in all pages via Sphinx's epilog option
ignore_messages = [
  "Hyperlink target .* is not referenced",
  "Unknown target name:.*",
  "Undefined substitution referenced: .*",
]
