# -- build ---------------------------

[build-system]
requires = [
  "argparse-manpage[setuptools]",
  "setuptools >=77.0.3",
  "setuptools_scm[toml] >=8.3.1",
  "wheel",
]
build-backend = "setuptools.build_meta"

# -- project -------------------------

[project]
name = "gwpy"
description = "A python package for gravitational-wave astrophysics"
readme = "README.md"
authors = [
  { name = "Duncan Macleod", email = "duncan.macleod@ligo.org" },
]
license = "GPL-3.0-or-later"
license-files = [
  "LICENSE",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
  "gravitational waves",
  "igwn",
  "ligo",
  "virgo",
]

# requirements
requires-python = ">=3.11"
dependencies = [
  "astropy >=6.1.6",
  "dateparser >=1.2.0",
  "dqsegdb2 >=1.3.0",
  "gwdatafind >=2.0.0",
  "gwosc >=0.6.0",
  "h5py >=3.11.0",
  "igwn-segments >=2.0.0",
  "ligotimegps >=2.1.0",
  "matplotlib >=3.8.0",
  "numpy >=1.24.4",
  "packaging >=24.2",
  "python-dateutil >=2.9.0",
  "requests >=2.32.3",
  "scipy >=1.12.0",
  "tqdm >=4.67.0",
]

# dynamic properties set by tools
dynamic = [
  "version",
]

[project.scripts]
gwpy-plot = "gwpy.cli.gwpy_plot:main"
gwpy-rds = "gwpy.tools.rds:main"
gwpy-tconvert = "gwpy.time.__main__:main"

[project.urls]
"Bug Tracker" = "https://gitlab.com/gwpy/gwpy/-/issues"
"Discussion Forum" = "https://gwpy.slack.com"
"Documentation" = "https://gwpy.github.io/docs/"
"Source Code" = "https://gitlab.com/gwpy/gwpy"

[project.optional-dependencies]
# arrakis I/O
arrakis = [
  "arrakis >=0.2.0",
]

# astronomy/cosmology calculations
astro = [
  "inspiral-range >=0.9.3",
]

# auth
auth = [
  "gssapi >=1.9.0",
  "htgettoken >=2.1",
  "igwn-auth-utils >=1.2.0",
  "requests-scitokens",
  "scitokens >=1.8.0",
]

# GWF I/O
gwf = [
  "lalsuite ; sys_platform != 'win32'",
]

# GravitySpy
gravityspy = [
  "pandas >=2.3.3",
  "psycopg2 >=2.9.11",
  "sqlalchemy >=2.0.45",
]

# HACR
hacr = [
  "pandas >=2.3.3",
  "PyMySQL >=1.1.2",
  "sqlalchemy >=2.0.45",
]

# Kerberos authentication
kerberos = [
  "gssapi",
]

# Pelican federation data access
pelican = [
  "requests-pelican >=0.2.0",
]

# PyCBC integration
pycbc = [
  "PyCBC >=2.8.5",
]

# SciTokens
scitokens = [
  "htgettoken >=2.1",
  "igwn-auth-utils >=1.2.0",
  "requests-scitokens",
  "scitokens >=1.8.0",
]

# SQL
sql = [
  "pandas >=2.3.3",
  "sqlalchemy >=2.0.45",
]

# Type checking
typing = [
  "optype[numpy]",
]

[dependency-groups]
# development environments
# NOTE: this should include everything in all of the other groups,
#       but may contain more
dev = [
  { "include-group" = "ci" },
  { "include-group" = "docs" },
  { "include-group" = "qa" },
  { "include-group" = "test" },
  "argparse-manpage >=1.6.0",
  "arrakis >=0.2.0",
  "ciecplib",
  "gssapi >=1.9.0",
  "htgettoken >=2.1",
  "igwn-auth-utils >=1.2.0",
  "igwn-ligolw ; sys_platform != 'win32'",
  "inspiral-range >=0.9.3",
  "lalsuite ; sys_platform != 'win32' and python_version < '3.14'",
  "lscsoft-glue ; sys_platform != 'win32'",
  "pandas >=2.3.3",
  "psycopg2 >=2.9.11 ; sys_platform == 'linux'",
  "PyCBC >=2.8.5 ; sys_platform == 'linux' and python_version < '3.14'",
  "PyMySQL >=1.1.2",
  "requests-pelican",
  "requests-scitokens",
  "scitokens >=1.8.0",
  "sqlalchemy >=2.0.45",
  "uproot >=4.1.5",
]

# CI/CD environments
ci = [
  # Unknown conda issue on Windows with jupyterlab_widgets 3.0.16
  "jupyterlab_widgets !=3.0.16 ; sys_platform == 'win32'",
]

# sphinx documentation
docs = [
  "furo >=2024.8.6",
  "matplotlib >=3.8.0",
  "myst-parser >=4.0.1",
  "numpydoc >=0.8.0",
  "pydata-sphinx-theme >=0.16.1",
  "Sphinx >=4.4.0",
  "sphinx-argparse >=0.5.2",
  "sphinx-automodapi",
  "sphinx-copybutton >=0.5.2",
  "sphinx-design >=0.6.1",
  "sphinx-gallery >=0.19.0",
  "sphinx-github-style >=1.2.2",
  "sphinxcontrib-programoutput",
]

# quality assurance
qa = [
  "optype[numpy]",
  "rstcheck >=6.2.5",
  "ruff >=0.14.11",
  "scipy-stubs",
  "ty >=0.0.11",
]

# test suite
test = [
  "pytest >=8.4",
  "pytest-cov >=5.0.0",
  "pytest-freezer >=0.4.9",
  "pytest-requires >=0.1.0",
  "pytest-rerunfailures >=15.1",
  "pytest-socket >=0.7.0",
  "pytest-timeout >=2.0.1",
  "pytest-xdist >=3.8.0",
  "requests-mock >=1.12.1",
]

# -- tools ---------------------------

# -- argparse-manpage

[tool.build_manpages]
manpages = [
  "man/gwpy-rds.1:prog=gwpy-rds:function=create_parser:module=gwpy.tools.rds",
  "man/gwpy-tconvert.1:prog=gwpy-tconvert:function=create_parser:module=gwpy.time.__main__",
]

# -- coverage.py

[tool.coverage.paths]
source = [
  "gwpy/",
  "*/gwpy/",
]

[tool.coverage.report]
exclude_lines = [
  # ignore when asked
  "pragma: no( |-)cover",
  # don't complain about typing blocks
  "if (typing\\.)?TYPE_CHECKING",
  # don't complain about __main__ blocks
  "if __name__ == '__main__'",
]
omit = [
  # don't report coverage for _version.py
  # (generated automatically by setuptools-scm)
  "*/_version.py",
]
# print report with one decimal point
precision = 1

# -- pip2conda

[tool.pip2conda.dependency-groups]
# conda packages for development
conda = [
  "lxml !=4.9.1 ; sys_platform == 'win32'",
  "python-framel >=8.40.1,!=8.46.0 ; sys_platform == 'win32' and python_version<'3.13'",
  "python-framel >=8.40.1,!=8.46.0 ; sys_platform != 'win32' and python_version<'3.14'",
  "python-ldas-tools-framecpp >=2.6.9 ; sys_platform != 'win32' and python_version<'3.15'",
  "python-nds2-client >=0.16",
]

# -- pytest

[tool.pytest.ini_options]
addopts = "-r a"
minversion = "8.1"
filterwarnings = [
  # ignore pkg_resources deprecation warnings
  "ignore:pkg_resources is deprecated",
  "ignore:Deprecated call to `pkg_resources",
  # ignore invalid escape sequence warnings from third-party packages
  "ignore:.*invalid escape sequence::pycbc",
  # ignore ResourceWarning for unclosed closed socket
  "ignore:unclosed.*SSLSocket.*closed",
  # https://github.com/gwastro/pycbc/pull/3701
  "ignore:`np.int` is a deprecated alias::pycbc..*",
  # https://git.ligo.org/lscsoft/glue/-/merge_requests/69
  "ignore:PY_SSIZE_T_CLEAN will be required",
  # https://github.com/pyreadline/pyreadline/issues/65
  "ignore:Using or importing the ABCs::pyreadline",
  # ignore numpy ndarray size warnings
  "ignore:numpy.ndarray size changed, may indicate binary incompatibility",
  # ignore warnings from distutils.version
  "ignore:distutils Version::matplotlib",
  "ignore:distutils Version::distutils",  # actually setuptools._distutils
  # ignore trapz warnings
  "ignore:`trapz` is deprecated::inspiral_range",
  # ignore astropy.cosmology warnings
  "ignore:The module `astropy.cosmology.core` is deprecated::astropy",
  # ignore false-positive warnings from dateparser
  "ignore:Parsing dates involving a day::dateparser",
]
xfail_strict = true

# -- rstcheck

[tool.rstcheck]
report_level = "warning"
ignore_directives = [
  # matplotlib
  "plot",
  # sphinx
  "include",
  # sphinx.ext.autosummary
  "autoclass",
  "autofunction",
  "automethod",
  "automodule",
  "autosummary",
  # sphinx.ext.ifconfig
  "ifconfig",
  # sphinx-argparse
  "argparse",
  # sphinx-automodapi
  "automodapi",
  "automodsumm",
  # sphinx-design
  "button-ref",
  "grid",
  "tab-set",
  # sphinx-gallery
  "image-sg",
  # sphinxcontrib-programoutput
  "command-output",
]
ignore_roles = [
  # extlinks
  "dcc",
  "doi",
  "ghu",
  "glu",
  "issue",
  "mr",
  "release",
  # doxylink
  "lal",
  "lalframe",
]
ignore_messages = [
  # rstcheck doesn't know about _references.txt
  "Unknown target name:.*",
  "Undefined substitution referenced: .*",
  # rstcheck doesn't understand transitions (----) and directives
  "Document .*may not (begin|end) with a transition",
]

# -- ruff

[tool.ruff]
namespace-packages = [
  ".gitlab/ci",
  "examples",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN003",  # type annotations for **kwargs
  "D203",  # blank line before class docstring
  "D213",  # docstring summary on second line
  "D413",  # blank line after last section
  "ICN001",  # unconventional import alias
  "PLC0415",  # import outside top level
  "PLR0913",  # too many arguments
  "SIM108",  # if-else instead of ternary if
  "TID252",  # relative imports
]
# allow 'mock_...' variables to go unused in tests
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|mock_.*)$"
# allow adding __future__ annotations
future-annotations = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
# packages that we provide typings for:
known-third-party = [
  "lal",
  "lalframe",
  "nds2",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",  # unused-import
  "F403",  # undefined-local-with-import-star
  "I001",  # import order
]
"*/tests/*" = [
  "ANN",  # type annotations
  "B904",  # raise from
  "EM101",  # string literal in exception
  "FBT001",  # boolean-typed positional argument
  "PLR2004",  # magic value used in comparison
  "S101",  # assert
  "SLF001",  # private member accessed
]
"docs/*" = [
  "A",  # builtins
  "ANN",  # type annotations
  "D",  # docstrings
  "INP001",  # implicit namespace package
]
"examples/**.py" = [
  "ANN",  # type annotations
  "D",  # docstrings
  "E402",  # import location
  "I001",  # import order
  "N999",  # invalid module name
  "T201",  # print()
]
# ignore unused imoports in typing.py helper module
"gwpy/typing.py" = [
  "F401",  # unused-import
]
# ignore some docstring rules in connect.py modules
"gwpy/*/connect.py" = [
  "D209",  # docstring closing quotes on separate line
  "D414",  # section has no content ("Notes")
]

# -- setuptools

[tool.setuptools.packages.find]
# note: this is only required in CI, which otherwise fails because
#       GHA is creating a temporary directory that setuptools
#       discovers as another top-level package
include = [
  "gwpy*",
]

[tool.setuptools_scm]
write_to = "gwpy/_version.py"
version_scheme = "release-branch-semver"

# -- ty

[tool.ty.environment]
extra-paths = [
  "./typings",
]

[tool.ty.src]
exclude = [
  "docs/",
  "examples/",
  "worktrees/",
]
