[aliases]
test = pytest

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = gwpy/_version.py
versionfile_build = gwpy/_version.py
tag_prefix = v
parentdir_prefix = gwpy-

[tool:pytest]
; print skip reasons
addopts = -r s

[coverage:run]
source = gwpy
omit =
	gwpy/*version*.py
	gwpy/utils/sphinx/*

[metadata]
license_file = LICENSE

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	ci/,
	docs/,
	gwpy/_version.py,
	venv/,
	versioneer.py,
per-file-ignores =
	__init__.py:F401,
	examples/**.py:E402
