[metadata]
name = gwpy
author = Duncan Macleod
author_email = duncan.macleod@ligo.org
description = A python package for gravitational-wave astrophysics
license = GPL-3.0-or-later
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# urls
url = https://gwpy.github.io
download_url = https://gwpy.github.io/docs/stable/install/
project_urls =
	Bug Tracker = https://github.com/gwpy/gwpy/issues
	Discussion Forum = https://gwpy.slack.com
	Documentation = https://gwpy.github.io/docs/
	Source Code = https://github.com/gwpy/gwpy
# classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >= 38.2.5
	setuptools_scm
	wheel
install_requires =
	astropy >= 3.0.0
	dqsegdb2
	gwdatafind
	gwosc >= 0.5.3
	h5py >= 2.7.0
	ligo-segments >= 1.0.0
	ligotimegps >= 1.2.1
	matplotlib >= 3.3.0
	numpy >= 1.15.0
	python-dateutil
	scipy >= 1.2.0
	tqdm >= 4.10.0
include_package_data = true

[options.entry_points]
console_scripts =
	gwpy-plot = gwpy.cli.gwpy_plot:main

[options.extras_require]
# test suite
test =
	beautifulsoup4
	freezegun >= 0.3.12
	pytest >= 3.6.3
	pytest-cov >= 2.4.0
	pytest-socket
	requests-mock
# sphinx documentation
docs =
	numpydoc >= 0.8.0
	requests
	sphinx >= 4.0.0
	sphinx-automodapi
	sphinx-material >= 0.0.32
	sphinxcontrib-programoutput
# development environments
dev =
	ciecplib
	lalsuite ; sys_platform != 'win32'
	lscsoft-glue ; sys_platform != 'win32'
	maya
	pandas
	psycopg2
	pycbc >= 1.13.4 ; python_version >= '3' and sys_platform != 'win32'
	pymysql
	pyRXP
	python-ligo-lw >= 1.7.0 ; sys_platform != 'win32'
	sqlalchemy
	uproot >= 3.11
	uproot3
# conda packages for development
# NOTE: this isn't a valid extra to install with pip
conda =
	ldas-tools-framecpp != 2.7.1
	python-framel >= 8.40.1
	python-ldas-tools-framecpp != 2.6.10 ; sys_platform != 'win32'
	python-nds2-client

# -- packaging --------------

[bdist_wheel]
universal = 1

# -- tools ------------------

[aliases]
test = pytest

[coverage:run]
source = gwpy
omit =
	gwpy/utils/sphinx/*

[flake8]
select =
	E,
	EXE,
	F,
	W,
ignore =
	E226,
	W503,
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	ci/,
	docs/,
	gwpy/_version.py,
	venv/,
per-file-ignores =
	__init__.py:F401,
	examples/**.py:E402

[tool:pytest]
addopts = -r a --color=yes
