[metadata]
name = gwpy
author = Duncan Macleod
author_email = duncan.macleod@ligo.org
description = A python package for gravitational-wave astrophysics
license = GPL-3.0-or-later
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# urls
url = https://gwpy.github.io
download_url = https://gwpy.github.io/docs/stable/install/
project_urls =
	Bug Tracker = https://github.com/gwpy/gwpy/issues
	Discussion Forum = https://gwpy.slack.com
	Documentation = https://gwpy.github.io/docs/
	Source Code = https://github.com/gwpy/gwpy
# classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.7
install_requires =
	astropy >=4.0
	dqsegdb2
	gwdatafind >=1.1.0
	gwosc >=0.5.3
	h5py >=2.8.0
	ligo-segments >=1.0.0
	ligotimegps >=1.2.1
	matplotlib >=3.3.0
	numpy >=1.16
	python-dateutil
	scipy >=1.2.0
	tqdm >=4.10.0
include_package_data = true

[options.entry_points]
console_scripts =
	gwpy-plot = gwpy.cli.gwpy_plot:main

[options.extras_require]
# test suite
test =
	coverage[toml] >=5.0
	freezegun >=0.3.12
	pytest >=3.9.1
	pytest-cov >=2.4.0
	pytest-socket
	pytest-xdist
	requests-mock
# sphinx documentation
docs =
	numpydoc >=0.8.0
	requests
	sphinx >=4.0.0
	sphinx-automodapi
	sphinx-material >=0.0.32
	sphinx-panels >=0.6.0
	sphinxcontrib-programoutput
# development environments
dev =
	; https://github.com/gwpy/gwpy/issues/1496
	astropy <5.1a0 ; sys_platform != 'win32'
	ciecplib
	lalsuite ; sys_platform != 'win32'
	lscsoft-glue ; sys_platform != 'win32'
	maya
	pandas
	psycopg2
	pycbc >=1.13.4 ; sys_platform != 'win32'
	pymysql
	pyRXP
	python-ligo-lw >=1.7.0 ; sys_platform != 'win32'
	sqlalchemy
	uproot >=3.11
	uproot3
# conda packages for development
# NOTE: this isn't a valid extra to install with pip
conda =
	python-framel >=8.40.1
	python-ldas-tools-framecpp ; sys_platform != 'win32'
	python-nds2-client

[bdist_wheel]
universal = 1
